Faturação no código JS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <main>
-    <div class="screen1 hide">
+    <div class="screen1 ">
       <h1>Qual é sua sorte de hoje?</h1>
       <p>Abra o biscoito e descura!</p>
       <div class="cookImg">
@@ -24,16 +24,16 @@
       </div>
     </div>
 
-    <div class="screen2">
+    <div class="screen2 hide">
       <h2>Aqui está sua sorte de hoje:</h2>
       <div class="frase">
         <span>Se alguém está tão cansado que não possa te dar um sorriso, deixa-lhe o teu.</span>
       </div>
       <img src="/img/cookiOpen.svg" alt="Imagem de um biscoito aberto">
-      <button>Abrir outro biscoito</button>
+      <button id="btnOther">Abrir outro biscoito</button>
     </div>
   </main>
-   
+   <script src="main.js"></script>
 </body>
 
 </html>
